name:               extensible-transformers
version:            0.0.0
synopsis:           The flexibility of extensible-effects applied to Monad transformers!
category:           Control
license:            MIT
author:             Ben Foppa
homepage:           https://github.com/RobotGymnast/extensible-transformers
maintainer:         benjamin.foppa@gmail.com
build-type:         Simple
cabal-version:      >= 1.9.2
description:
    This package gives you more type flexiblity in your Monad
    transformer stacks, making your code more maintainable and readable.

library
    hs-source-dirs:   .
    ghc-options:      -Wall
    exposed-modules:
                    Control.Monad.Trans.Flexible

    build-depends: base == 4.*
                 , transformers

executable example
    hs-source-dirs:   .
    ghc-options:      -Wall -Werror
    Main-is:          example.hs
    build-depends: base
                 , transformers
                 , extensible-transformers

source-repository head
  type: git
  location: https://github.com/RobotGymnast/extensible-transformers.git
